<resources>
    <string name="app_name">Jasper Report</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="que_es">¿QUE ES JASPERREPORTS?</string>
    <string name="intro">\n\nJasperReports es una librería de creación de informes que tiene la habilidad de entregar contenido enriquecido al monitor, a la impresora o a ficheros PDF, HTML, XLS, CSV y XML. \n\nEstá escrito completamente en Java y puede ser usado en gran variedad de aplicaciones de Java, incluyendo J2EE o aplicaciones web, para generar contenido dinámico. \n\nSe ha desarrollado un subproyecto que es un servidor integrado para informes: JasperReports Server. \n\nSu propósito principal es ayudar a crear documentos de tipo páginas, preparados para imprimir en una forma simple y flexible. \n\nJasperReports se usa comúnmente con iReport, un front-end gráfico de código abierto para la edición de informes, si bien a partir de la versión 5.5.0 iReport ha sido sustituido por Jaspersoft Studio, un front-end gráfico de código abierto basado en Eclipse. \n\nSe encuentra bajo licencia libre GNU, por lo que es Software libre. Forma parte de la iniciativa apilada open source Lisog.</string>
    <string name="usuario_login">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="action_settings">Settings</string>
    <string name="error_autenticar">Usuario y/o contraseña incorrecto(s)</string>
    <string name="usuario_valido">erick</string>
    <string name="clave_valida">123</string>
    <string name="nuevo_usuario">Nombre Usuario</string>
    <string name="email">Correo Electronico</string>
    <string name="password">Contraseña</string>
    <string name="add_user">Agregar Usuario</string>
    <string name="eliminar">Eliminar</string>
    <string name="modificar">Modificar</string>
    <string name="agregarUsuario">Nuevo Usuario</string>
    <string name="tocar_imagen">Toque La Imagen Para Continuar</string>
    <string name="desarrollador">Desarrollador: Erick Eduardo Castañon Anaya \n\nUniveridad Tecnológica Del Norte De Guanajuato \n\nGSI-1151</string>
    <string name="id_login">ID</string>
    <string name="nombre_login">Nombre</string>
    <string name="email_login">Email</string>
    <string name="password_login">Pass</string>
    <string name="emptyString" />
    <string name="name_ingresar">Nombre</string>
    <string name="email_ingresar">Correo Electronico</string>
    <string name="usuario_ingresar">Usuario</string>
    <string name="pass_ingresar">Contraseña</string>
    <string name="pass_confirmar">Confirmar Contraseña</string>
    <string name="registrase">Registrarse</string>
    <string name="te_da_la_bienvenida">Te Da La Bienvenida</string>
    <string name="configuracion_menu">Configuracion</string>
    <string name="menuPrincipal_menu">Menu Principal</string>
    <string name="logout">Logout</string>
    <string name="salir">Salir</string>
    <string name="ayuda">Ayuda</string>
    <string name="acceder">Acceder</string>
    <string name="cancelar">Cancelar</string>
    <string name="slogan">La Manera Mas Fácil De Crear Reportes</string>
    <string name="caracteristicas">Caracteristicas De JasperReport \n\n Está escrito completamente en Java y puede ser usado en gran variedad de aplicaciones de este tipo, incluyendo J2EE o aplicaciones web, para generar contenido dinámico.
Es una biblioteca que puede ser embebida en cualquier aplicación Java.\n\n

Sus funciones incluyen:\n\n
•	Scriptlets, que pueden acompañar a la definición del informe, y pueden ser invocados en cualquier momento para realizar un procesamiento adicional. El scriptlet se basa en Java, y tiene muchos hooks (ganchos) que se pueden invocar antes o después de las etapas de la generación de informes, como el Informe, Página, Columna o Grupo.\n
•	Sub-informes para usuarios con requisitos más sofisticados de gestión, los informes diseñados para JasperReports pueden ser fácilmente importados a JasperServer que es el servidor de informes interactivos.
</string>
    <string name="entorno">Ciclo vital de JasperReport \n\n
Los reportes se generan basados en un diseño (xml), armado y compilado antes de la puesta en marcha del motor generador del reporte. Una vez listo el diseño, el motor realiza la carga de datos a través de una conexión JDBC a una base de datos relacional, respetando los campos y las consultas predefinidas.\n\n
Cumplidos estos pasos, entran en juego las clases que permiten exportar, imprimir o visualizar el reporte, para darle fin a su ciclo de vida.
</string>
    <string name="ciclo_vital">Compilación de diseño de reportes en JasperReport\n\n
Una vez que el diseño esta listo, es necesario compilarlo antes de poder iniciar el proceso de llenado. La compilación se lleva acabo a través del método compileReport() expuesto en la clase net.sf.jasperreports.engine.JasperManager.\n\n
En este proceso, el diseño es transformado en un objeto serializable del tipo net.sf.jasperreports.engine.JasperReport, que luego se guarda en disco. Este archivo es utilizado cuando la aplicación completa el reporte con información.\n\n
Para previsualizar un diseño puede utilizarse la clase net.sf.jasperreports.engine.view.JasperDesignViewer, a cuyo método main() es posible entregarle el archivo xml o el archivo compilado a fin de visualizarlo.
</string>
    <string name="diseños">A continuación presento de forma detallada los métodos utilizados para exportar los reportes en los formatos anteriormente mencionados.\n\n
import net.sf.jasperreports.engine.JRExporter;\n
import net.sf.jasperreports.engine.JRExporterParameter;\n
import net.sf.jasperreports.engine.JasperFillManager;\n
import net.sf.jasperreports.engine.JasperReport;\n
import net.sf.jasperreports.engine.JasperPrint;\n
import net.sf.jasperreports.engine.JasperExportManager;\n
import net.sf.jasperreports.engine.JasperCompileManager;\n
import net.sf.jasperreports.engine.JasperManager;\n
import net.sf.jasperreports.engine.export.JRHtmlExporter;\n
import net.sf.jasperreports.engine.export.JRHtmlExporterParameter;\n
import net.sf.jasperreports.engine.export.JRPdfExporter;\n
import net.sf.jasperreports.engine.export.JRXlsExporter;\n
import net.sf.jasperreports.engine.export.JRXlsExporterParameter;\n
import net.sf.jasperreports.j2ee.servlets.ImageServlet;\n
import net.sf.jasperreports.engine.JRException;\n\n

public class Reportes extends HttpServlet {    //usamos un Servlet para generar los reportes\n
private String rutaRep;\n\n

public void init(ServeletConfig fgc)\n
{\n
   rutaRep = fgc.getServletContext().getRealPath("Directorio_de_los_Reportes");\n
}\n\n

//Método que exporta el reporte en pdf\n
private void exportPdf( HttpServletResponse response,String narchivo,HashMap param) throws IOException\n
{\n
response.setContentType("application/pdf");\n
JasperReport js;\n
JasperPrint jp;\n
JRExporter exporter=null;\n
OutputStream op=response.getOutputStream();\n
try{\n
 js = JasperManager.compileReport(rutaRep+"\\"+narchivo);\n
 jp = JasperManager.fillReport(js,param,Motor.getConexion());\n
 byte[] bites = JasperExportManager.exportReportToPdf(jp);\n
 response.setHeader("Content-disposition", "attachment; filename=Informe.pdf");\n
 response.setContentLength(bites.length);\n
 op.write(bites);\n
 op.close();\n
 }\n
 catch(Exception e)\n
 {\n
  JOptionPane.showMessageDialog(null,e);\n
 }\n
}\n\n

//exporta en html\n
private void exportHtml(HttpServletResponse response,String narchivo,HashMap param) throws IOException\n
{\n
 response.setContentType("text/html");\n
 JasperReport js;\n
 JasperPrint jp;\n
 JRExporter exporter=null;\n
 try{\n
 js = JasperManager.compileReport(rutaRep+"\\"+narchivo);\n
 jp = JasperManager.fillReport(js,param,Motor.getConexion());\n
 exporter = new JRHtmlExporter();\n
 exporter.setParameter(JRExporterParameter.JASPER_PRINT,jp);\n
 exporter.setParameter(JRExporterParameter.OUTPUT_WRITER,response.getWriter());\n
 exporter.setParameter(JRHtmlExporterParameter.IMAGES_URI, request.getContextPath() + "/image?image=");\n\n

 if(exporter!=null)\n
 exporter.exportReport();\n
 }\n
 catch(Exception e)\n
 {\n
 JOptionPane.showMessageDialog(null,e);\n
 }\n
}\n\n

//exporta a xls\n
private void exportXls(HttpServletResponse response,String narchivo,HashMap param) throws IOException\n
 {\n
 try{\n\n

 JasperReport report = JasperCompileManager.compileReport(rutaRep+"\\"+narchivo);\n
 JasperPrint print = JasperFillManager.fillReport(report,param,Motor.getConexion());\n
 OutputStream out = response.getOutputStream();\n\n

 ByteArrayOutputStream arrayOutputStream = new ByteArrayOutputStream();\n
 JRXlsExporter exporterXLS = new JRXlsExporter();\n\n

 exporterXLS.setParameter(JRXlsExporterParameter.JASPER_PRINT, print);\n
 exporterXLS.setParameter(JRXlsExporterParameter.OUTPUT_STREAM, arrayOutputStream);\n
 exporterXLS.setParameter(JRXlsExporterParameter.IS_ONE_PAGE_PER_SHEET, Boolean.FALSE);\n
 exporterXLS.setParameter(JRXlsExporterParameter.IS_DETECT_CELL_TYPE, Boolean.TRUE);\n
 exporterXLS.setParameter(JRXlsExporterParameter.IS_WHITE_PAGE_BACKGROUND, Boolean.FALSE);\n
 exporterXLS.setParameter(JRXlsExporterParameter.IS_REMOVE_EMPTY_SPACE_BETWEEN_ROWS, Boolean.TRUE);\n
 exporterXLS.exportReport();\n\n

 response.setHeader("Content-disposition", "attachment; filename=ListadoPDF");\n
 response.setContentType("application/vnd.ms-excel");\n
 response.setContentLength(arrayOutputStream.toByteArray().length);\n\
 out.write(arrayOutputStream.toByteArray());\n
 out.flush();\n
 out.close();\n\n

 }catch(JRException e)\n
 {\n
 JOptionPane.showMessageDialog(null,e);;\n
 }\n\n

 }\n\n

}\n
En los 3 metodos mostrados anteriormente son comunes estas dos lineas de codigo:\n
1) js = JasperManager.compileReport(rutaRep+”\\”+narchivo);\n
2) jp = JasperManager.fillReport(js,param,Motor.getConexion());\n\n
La primera linea se encarga de compilar el reporte, invocando el metodo JasperManager.compileReport(), el cual recibe como parametro la direccion o ruta donde se encuentra el archivo fuente del reporte. En mi caso la variable rutaRep, que se inicializa en el metodo init del servlet, almacena la direccion de la carpeta donde se encuentran alojados los fuentes de los reportes y el parametro narchivo indica el nombre del archivo a seleccionar.
La segunda linea se encarga de llenar el reporte. El metodo invocado recibe tres parametros: el primero de ellos es una referencia al reporte a llenar; el segundo contiene los parametros necesario para llenar el reporte (si no son necesarios se pasa null); y el tercero es una referencia a la conexion con la base de datos, en mi caso utilizo una clase llamada Motor, encargada de gestionar la conexion e invoco su metodo getConexion(), que devuelve precisamente la referencia a la bd.
Ahora solo queda invocar al metodo del servlet correspondiente dependiendo del tipo de formato que selecciona el usuario en la interfaz grafica.  A continuacion muestro un pequeño ejemplo de como invocar los metodos.
protected void doGet(HttpServletRequest request, HttpServletResponse response)\n
 throws ServletException, IOException {\n\n

 String tipo = request.getParameter("tipo");\n
 if (tipo.equals("pdf")) {\n
     this.exportPdf(response, "ejemplo.jrxml",null}else if (tipo.equals("xls")) {\n
    this.exportXls(response, "ejemplo.jrxml",null}\n\n

}
</string>
    <string name="preview">Previo</string>
    <string name="register">Registrarse</string>
    <string name="ver_contenido">Si quieres ver todo el contenido de esta Aplicacion registrate</string>
    <string name="progress">Ver Progreso De Curso</string>
</resources>