<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/colorFondo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txv_user_id"
        android:text="@string/id_login"
        android:textSize="10pt"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColor="@color/colorBlanco"
        />

    <TextView
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:id="@+id/txv_user_name"
        android:text="@string/nombre_login"
        android:textSize="10pt"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColor="@color/colorBlanco"
        />

    <TextView
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:id="@+id/txv_user_email"
        android:text="@string/email_login"
        android:textSize="10pt"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColor="@color/colorBlanco"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txv_user_password"
        android:text="@string/password_login"
        android:textSize="10pt"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColor="@color/colorBlanco"
        />

</LinearLayout>