<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="10dp"
    android:background="@color/colorFondo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuevo_usuario"
        android:layout_margin="5dp"
        android:textColor="@color/colorBlanco"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_user"
        android:hint="@string/nuevo_usuario"
        android:layout_margin="5dp"
        android:textColor="@color/colorBlanco"
        >
        <requestFocus/>
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_margin="5dp"
        android:textColor="@color/colorBlanco"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_email"
        android:hint="@string/email"
        android:layout_margin="5dp"
        android:textColor="@color/colorBlanco"
        >
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_margin="5dp"
        android:textColor="@color/colorBlanco"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_password"
        android:hint="@string/password"
        android:layout_margin="5dp"
        android:textColor="@color/colorBlanco"
        >
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_update"
        android:text="@string/modificar"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_delete"
        android:text="@string/eliminar"
        />


    </LinearLayout>
</LinearLayout>