<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:layout_width="281dp"
        android:layout_height="180dp"
        android:src="@drawable/new_login"
        android:id="@+id/imv_new_user"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_ingresar"
        android:textSize="10pt"
        android:id="@+id/txv_nombre"
        android:textColor="@color/colorBlanco"
        android:layout_below="@id/imv_new_user"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_nombre"
        android:layout_below="@+id/txv_nombre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_ingresar"
        android:id="@+id/txv_correo"
        android:textSize="10pt"
        android:textColor="@color/colorBlanco"
        android:layout_below="@id/edt_nombre"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_correo"
        android:layout_below="@id/txv_correo"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario_ingresar"
        android:textSize="10pt"
        android:id="@+id/txv_usuario_login"
        android:textColor="@color/colorBlanco"
        android:layout_below="@id/edt_correo"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_usuario"
        android:layout_below="@id/txv_usuario_login"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_ingresar"
        android:textSize="10pt"
        android:id="@+id/txv_contrasenia"
        android:textColor="@color/colorBlanco"
        android:layout_below="@id/edt_usuario"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_contrasenia"
        android:layout_below="@id/txv_contrasenia"
        android:inputType="textPassword"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_confirmar"
        android:textSize="10pt"
        android:id="@+id/txv_contrasenia_confirmacion"
        android:textColor="@color/colorBlanco"
        android:layout_below="@id/edt_contrasenia"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_contrasenia_confirmacion"
        android:inputType="textPassword"
        android:layout_below="@id/txv_contrasenia_confirmacion"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrase"
        android:id="@+id/btn_registrar"
        android:onClick="onSignUpClick"
        android:gravity="center"
        android:layout_below="@+id/edt_contrasenia_confirmacion"
        android:layout_centerHorizontal="true">
    </Button>
    </RelativeLayout>
</ScrollView>