<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mx.edu.utng.jasperreport.MenuActivity"
    tools:showIn="@layout/app_bar_menu"
    android:background="@color/colorFondo">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imv_logo"
        android:src="@drawable/logo"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/que_es"
        android:id="@+id/txv_que_es"
        android:layout_below="@id/imv_logo"
        android:gravity="center"
        android:textColor="@color/colorBlanco"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txv_intro"
        android:text="@string/intro"
        android:layout_below="@id/txv_que_es"
        android:textColor="@color/colorBlanco"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txv_go_back"
            android:text="@string/ver_contenido"
            android:layout_below="@id/txv_intro"
            android:textColor="@color/colorPrimaryDark"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/btn_registrarse"
            android:onClick="onButtonClick"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@id/txv_go_back"
            />

</RelativeLayout>
</ScrollView>